syntax = "proto3";

package apps.v1;

import "apps/v1/info.proto";
import "apps/v1/status.proto";

service AppsService {
  rpc GetInfo(apps.v1.GetInfoRequest) returns (apps.v1.GetInfoResponse) {}
  rpc GetStatus(apps.v1.GetStatusRequest) returns (apps.v1.GetStatusResponse) {}
}
